--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "topcoat": "~0.8.0",
     "fontawesome": "~4.0.3",
     "lodash": "~2.4.1",
-    "coffee-script": "~1.7.1"
+    "coffee-script": "~1.7.1",
+    "react": "~0.10.0"
   }
 }
