--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "jshint-loader": "^0.6.0",
     "gulp-mocha": "^0.4.1",
     "gulp-util": "^2.2.14",
-    "gulp-rimraf": "0.0.9",
+    "gulp-rimraf": "0.0.10",
     "gulp-inject": "^0.4.1",
-    "gulp": "^3.6.0",
+    "gulp": "^3.6.1",
     "react-tools": "^0.10.0",
     "css-loader": "^0.6.12",
-    "webpack": "^1.1.2",
+    "webpack": "^1.1.8",
     "compression-webpack-plugin": "^0.1.1",
-    "script-loader": "^0.5.2"
+    "script-loader": "^0.5.2",
+    "jsx-loader": "^0.10.0"
   },
   "scripts": {
     "test": "gulp test"
