--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "webpack": "^1.1.8",
     "compression-webpack-plugin": "^0.1.1",
     "script-loader": "^0.5.2",
-    "jsx-loader": "^0.10.0"
+    "jsx-loader": "^0.10.0",
+    "imports-loader": "~0.6.2"
   },
   "scripts": {
     "test": "gulp test"
