--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "compression-webpack-plugin": "^0.1.1",
     "script-loader": "^0.5.2",
     "jsx-loader": "^0.10.0",
-    "imports-loader": "~0.6.2"
+    "imports-loader": "https://registry.npmjs.org/imports-loader/-/imports-loader-0.6.2.tgz",
+    "exports-loader": "~0.6.2"
   },
   "scripts": {
     "test": "gulp test"
