tweak styles, compass, add unload api, update components

--- a/package.json
+++ b/package.json
@@ -7,28 +7,29 @@
     "test": "tests"
   },
   "dependencies": {
-    "lodash": "^2.4.1",
-    "envify": "^1.2.1",
-    "react": "^0.10.0",
-    "style-loader": "^0.6.3",
-    "expose-loader": "^0.5.3",
-    "minimist": "0.0.8",
-    "file-loader": "^0.5.1",
-    "chai": "^1.9.1",
-    "jshint-loader": "^0.6.0",
-    "gulp-mocha": "^0.4.1",
-    "gulp-util": "^2.2.14",
-    "gulp-rimraf": "0.1.0",
-    "gulp-inject": "^0.4.1",
-    "gulp": "^3.6.2",
-    "react-tools": "^0.10.0",
-    "css-loader": "^0.6.12",
-    "webpack": "^1.1.8",
-    "compression-webpack-plugin": "^0.1.1",
-    "script-loader": "^0.5.2",
-    "jsx-loader": "^0.10.0",
-    "imports-loader": "https://registry.npmjs.org/imports-loader/-/imports-loader-0.6.2.tgz",
-    "exports-loader": "~0.6.2"
+    "lodash": "*",
+    "envify": "*",
+    "react": "*",
+    "style-loader": "*",
+    "expose-loader": "*",
+    "minimist": "*",
+    "file-loader": "*",
+    "chai": "*",
+    "jshint-loader": "*",
+    "gulp-mocha": "*",
+    "gulp-util": "*",
+    "gulp-rimraf": "*",
+    "gulp-inject": "*",
+    "gulp": "*",
+    "react-tools": "*",
+    "css-loader": "*",
+    "webpack": "*",
+    "compression-webpack-plugin": "*",
+    "script-loader": "*",
+    "jsx-loader": "*",
+    "imports-loader": "*",
+    "exports-loader": "*",
+    "less-loader": "*"
   },
   "scripts": {
     "test": "gulp test"
