move parse logic to webworker, some minor tweaks

--- a/package.json
+++ b/package.json
@@ -7,29 +7,31 @@
     "test": "tests"
   },
   "dependencies": {
-    "lodash": "*",
-    "envify": "*",
-    "react": "*",
-    "style-loader": "*",
-    "expose-loader": "*",
-    "minimist": "*",
-    "file-loader": "*",
     "chai": "*",
-    "jshint-loader": "*",
-    "gulp-mocha": "*",
-    "gulp-util": "*",
-    "gulp-rimraf": "*",
-    "gulp-inject": "*",
-    "gulp": "*",
-    "react-tools": "*",
-    "css-loader": "*",
-    "webpack": "*",
     "compression-webpack-plugin": "*",
-    "script-loader": "*",
-    "jsx-loader": "*",
-    "imports-loader": "*",
+    "css-loader": "*",
+    "envify": "*",
     "exports-loader": "*",
-    "less-loader": "*"
+    "expose-loader": "*",
+    "file-loader": "*",
+    "glob": "*",
+    "gulp": "*",
+    "gulp-inject": "*",
+    "gulp-mocha": "*",
+    "gulp-rimraf": "*",
+    "gulp-util": "*",
+    "imports-loader": "*",
+    "jshint-loader": "*",
+    "jsx-loader": "*",
+    "less-loader": "*",
+    "lodash": "*",
+    "minimist": "*",
+    "react": "*",
+    "react-tools": "*",
+    "script-loader": "*",
+    "style-loader": "*",
+    "webpack": "*",
+    "worker-loader": "*"
   },
   "scripts": {
     "test": "gulp test"
